fix(select): correct invalid inline spacing

--- a/src/components/select/_select.scss
+++ b/src/components/select/_select.scss
@@ -214,6 +214,10 @@
     position: relative;
     display: flex;
     align-items: center;
+
+    &:hover .#{$prefix}--select-input {
+      background-color: $hover-ui;
+    }
   }
 
   .#{$prefix}--select-input {
@@ -225,7 +229,7 @@
     width: rem(224px);
     min-width: rem(128px);
     max-width: rem(448px);
-    padding: 0 rem(34px) 0 $carbon--spacing-05; // 1.5rem + chevron width
+    padding: 0 rem(42px) 0 $carbon--spacing-05; // 1.5rem + chevron width
     color: $text-01;
     background-color: $field-01;
     border: none;
@@ -252,11 +256,12 @@
       @include focus-outline('outline');
     }
 
-    &:disabled {
+    &:disabled,
+    &:hover:disabled {
       cursor: not-allowed;
-      background: $disabled-background-color;
-      color: $disabled;
-      border-bottom: 1px solid $disabled-background-color;
+      background-color: $disabled-background-color;
+      color: $disabled-02;
+      border-bottom-color: $disabled-background-color;
     }
   }
 
@@ -266,7 +271,7 @@
   }
 
   .#{$prefix}--select-input__wrapper[data-invalid] .#{$prefix}--select-input {
-    padding-right: rem(58px); // 1rem + chevron width + invalid icon width
+    padding-right: rem(64px); // 1rem + chevron width + invalid icon width
   }
 
   .#{$prefix}--select-input__wrapper[data-invalid] .#{$prefix}--select-input,
@@ -282,11 +287,22 @@
   }
 
   .#{$prefix}--select-input:disabled ~ .#{$prefix}--select__arrow {
-    fill: $disabled;
+    fill: $disabled-02;
   }
 
   .#{$prefix}--select--light .#{$prefix}--select-input {
-    background: $field-02;
+    background-color: $field-02;
+
+    &:hover {
+      background-color: $ui-01;
+    }
+
+    &:disabled,
+    &:hover:disabled {
+      cursor: not-allowed;
+      background-color: $disabled-background-color;
+      color: $disabled-02;
+    }
   }
 
   .#{$prefix}--select__arrow {
@@ -296,7 +312,6 @@
     pointer-events: none;
   }
 
-  .#{$prefix}--select__disabled-icon,
   .#{$prefix}--select-input__wrapper[data-invalid] .#{$prefix}--select-input ~ .#{$prefix}--select__invalid-icon {
     position: absolute;
     right: rem(34px); // 1.5rem + chevron width
@@ -355,6 +370,7 @@
     color: $text-01;
     border-bottom: none;
     padding-left: $carbon--spacing-03;
+    padding-right: rem(26px);
 
     @-moz-document url-prefix() {
       padding-top: 0;
@@ -371,12 +387,12 @@
     right: $carbon--spacing-03;
   }
 
-  .#{$prefix}--select--inline .#{$prefix}--select-input--invalid ~ .#{$prefix}--select__invalid-icon {
-    right: rem(24px);
+  .#{$prefix}--select--inline.#{$prefix}--select--invalid .#{$prefix}--select-input {
+    padding-right: rem(50px);
   }
 
-  .#{$prefix}--select--inline .#{$prefix}--select-input--invalid ~ .#{$prefix}--select__disabled-icon {
-    right: rem(48px);
+  .#{$prefix}--select--inline.#{$prefix}--select--invalid .#{$prefix}--select-input ~ .#{$prefix}--select__invalid-icon {
+    right: rem(24px);
   }
 
   .#{$prefix}--select--inline .#{$prefix}--select-input:disabled {
